# distribution-extension

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
distribution_extention/: __init__.py  base.py  continuous.py  discrete.py  factory.py  kl.py
src/distribution_extension/: __init__.py  base.py  continuous.py  discrete.py  factory.py  kl.py  utils.py
src/distribution_extention/: __init__.py  base.py  continuous.py  discrete.py  factory.py  kl.py
tests/: test__base.py  test__continuous.py  test__discrete.py  test__factory.py  test__kl.py  test__utils.py
